[package]
name = "candle-lstm"
version = "0.2.3"
edition = "2021"
description = "optimize HuggingFace candle LSTM in some cases"
readme = "README.md"
repository = "https://github.com/kigichang/candle-lstm"
license-file = "LICENSE"
keywords = ["candle", "lstm", "pytorch"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "db08cc0a" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "db08cc0a" }

[dev-dependencies]
anyhow = "1.0.86"

[target.'cfg(target_os = "macos")'.dev-dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "db08cc0a", features = ["accelerate", "metal"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "db08cc0a", features = ["accelerate", "metal"]}

[target.'cfg(not(target_os = "macos"))'.dev-dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "db08cc0a", features = ["mkl", "cuda"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "db08cc0a", features = ["mkl", "cuda"]}

